--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4.1.1
 
-
       - name: Set AWS Credentials
         uses: hei-school/aws-credentials-setter@v1.0.3
         with:
-          secrets: ${{ toJSON(secrets) }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: eu-west-3
-        env:
-          AWS_REGION: eu-west-3
 
       - name: Make Gradlew Executable
         run: chmod +x gradlew
